-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: internal
-
Component/s: javafx
-
generic
-
windows
When running RenderPerf on 3D tests (3DSphere, 3DCylinder) memory usage continuously increases on D3D12. Potentially there's a memory leak that also might lower performance in those tests - investigate and fix.
Similar behavior is seen in Button test, which uses lots of Texture update calls.
To reproduce (assumes RenderPerfTest is in renderperf directory):
```
java @<jfx_dir>/build/run.args -Djavafx.animation.fullspeed=true -Dprism.order=d3d12 renderperf.RenderPerfTest -n 10000 -t 3DSphere
```
Similar behavior is seen in Button test, which uses lots of Texture update calls.
To reproduce (assumes RenderPerfTest is in renderperf directory):
```
java @<jfx_dir>/build/run.args -Djavafx.animation.fullspeed=true -Dprism.order=d3d12 renderperf.RenderPerfTest -n 10000 -t 3DSphere
```
- blocks
-
JDK-8342162 ☂ JavaFX D3D12: Road to feature-completeness
-
- Resolved
-