8344288: Investigate D3D12 memory leaks during rendering

Memory leaks came from not calling CommandAllocator::Reset() to reclaim
memory used by Command Lists.

To resolve, added a collection of Command Allocators to CommandListPool
and logic to cycle through them when a frame finishes rendering. This
keeps the memory usage consistent throughout test execution and raises
FPS on some more command-heavy scenarios like Button rendering.