modules/javafx.graphics/src/main/native-prism-d3d12/Internal/D3D12PSOManager.hpp
@@ -56,6 +56,8 @@ struct PSOParameters
             enableDepthTest == other.enableDepthTest &&
             msaaSamples == other.msaaSamples;
     }
+
+
 };
 
 } // namespace Internal
